[gd_scene load_steps=2 format=3 uid="uid://c2ukvs58nra0w"]

[ext_resource type="Script" uid="uid://csvw4s7wvvuou" path="res://assets/ui/options_menu/options_menu.gd" id="1_m1sgw"]

[node name="OptionsMenu" type="Control"]
visible = false
custom_minimum_size = Vector2(480, 360)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_m1sgw")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0509804, 0.0509804, 0.0509804, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 24
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 24
alignment = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Master volume:"

[node name="MasterVolumeSlider" type="HSlider" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(164, 0)
layout_mode = 2
size_flags_vertical = 4
max_value = 1.0
step = 0.001

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 24
alignment = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "SFX volume:"

[node name="SFXVolumeSlider" type="HSlider" parent="VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(164, 0)
layout_mode = 2
size_flags_vertical = 4
max_value = 1.0
step = 0.001

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 24
alignment = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer3"]
layout_mode = 2
text = "Music volume:"

[node name="MusicVolumeSlider" type="HSlider" parent="VBoxContainer/HBoxContainer3"]
unique_name_in_owner = true
custom_minimum_size = Vector2(164, 0)
layout_mode = 2
size_flags_vertical = 4
max_value = 1.0
step = 0.001

[node name="HBoxContainer4" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Button" type="Button" parent="VBoxContainer/HBoxContainer4"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
text = "Back"

[connection signal="value_changed" from="VBoxContainer/HBoxContainer/MasterVolumeSlider" to="." method="_on_master_volume_slider_value_changed"]
[connection signal="value_changed" from="VBoxContainer/HBoxContainer2/SFXVolumeSlider" to="." method="_on_sfx_volume_slider_value_changed"]
[connection signal="value_changed" from="VBoxContainer/HBoxContainer3/MusicVolumeSlider" to="." method="_on_music_volume_slider_value_changed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer4/Button" to="." method="_on_button_pressed"]
